--- a/etiquetas/css/estilo.css
+++ b/etiquetas/css/estilo.css
@@ -25,6 +25,7 @@ h1 {
     position: fixed;
     width:100%;
     z-index: 2;
+    background-color: white;
 
 }
 
@@ -52,21 +53,20 @@ h1 {
 .column {
     -ms-flex: 25%; /* IE 10 */
     flex: 12.5%;
-    padding: 0 4px;
+    padding: 0 8px;
+    margin-top: 10%;
 }
 
 .column img {
     margin-top: 8px;
     vertical-align: middle;
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
+    opacity: 0.85;
     -webkit-transition: .3s ease-in-out;
     transition: .3s ease-in-out;
 }
 
 img:hover {
-    -webkit-filter: grayscale(0);
-    filter: grayscale(0);
+    opacity: 1;
 
 }
 
