--- a/etiquetas/css/estilo.css
+++ b/etiquetas/css/estilo.css
@@ -26,7 +26,7 @@ h1 {
     width:100%;
     z-index: 2;
     background-color: white;
-
+    
 }
 
 
@@ -35,6 +35,11 @@ h1 {
     margin-left: 5%;
 
 
+}
+
+#todo{
+    z-index: 100;
+    color: rgba(0,0,0,0.9);
 }
 
 
@@ -51,7 +56,7 @@ h1 {
 
 /* Create two equal columns that sits next to each other */
 .column {
-    -ms-flex: 25%; /* IE 10 */
+    -ms-flex: 12.5%; /* IE 10 */
     flex: 12.5%;
     padding: 0 8px;
     margin-top: 10%;
@@ -105,7 +110,7 @@ li{
     transition: 0.4s;
     padding: 1rem 0;
     box-sizing:border-box;
-    z-index: 3; 
+    z-index: 101; 
 }
 
 .abrir-cerrar {
@@ -177,5 +182,14 @@ li{
     display: none;
 }
 
-#contenido {
+
+
+
+@media (max-width: 800px) and (min-width: 300px) {
+.sidebar { width:40%;
+        overflow-x: hidden;}
+
+.column{-ms-flex: 25%; /* IE 10 */
+    flex: 25%;}
+
 }
