--- a/estilos-inicio.css
+++ b/estilos-inicio.css
@@ -1,14 +1,4 @@
-* {box-sizing: border-box;}
-.img-magnifier-container {
-  position: relative;
-}
-.img-magnifier-glass {
-  position: absolute;
-  cursor: none;
-  /*Set the size of the magnifier glass:*/
-  width: 150px;
-  height: 150px;
-}
+
 
 body {
 	margin: 0 auto;
@@ -18,24 +8,153 @@ body {
 	
 	width: 100%;
 	height: 100%;
-	/*background-color: blue;*/
-}
-
-#foto-1{
-
-	position: relative;
-	margin-top: 500px;
-	margin-left: 200px;
-
-
-}
-
-
-#etiquetas-fijas{
 	
-	background-color: rgba(0, 0, 0, 50);
+}
+
+.contenedor img {
+
 	width: 100%;
-	height: 150px;
-	margin: 0 auto;
+	height: 100%;
+	position: fixed;
+	z-index: 1;
+}
+
+h1 {
+	position: absolute;
+    left: 50%;
+    top: 5%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    z-index: 10;
+    color: white;
+    font-family: 'Enriqueta', serif;
+    font-size: 60;
+}
+
+
+
+#footer {
+   position:fixed;
+   left:0px;
+   bottom:0px;
+   height:10%;
+   width:100%;
+   background:rgba(15, 15, 15);
+   z-index: 11;
+}
+
+ ul {
+    list-style-type: none;
+    margin-top: 1%;
+    text-decoration: none;
+}
+
+li{
+   display: inline;
+   margin: 0 10px 0 0;
+   text-decoration: none;
+}
+
+.enlaces {
+    text-decoration: none;
+    color: rgb(203,79,76);
+    font-size: 12px;
+    font-family: 'PT Sans Narrow', sans-serif;
+}
+
+.enlaces:hover{
+	color: rgb(110,79,76);
 
 }
+
+
+
+
+
+/* PARA EL SIDEBAR */
+
+.sidebar {
+    position: fixed;
+    height: 100%;
+    width: 0;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background-color: rgb(203,79,76);
+    overflow-x: hidden;
+    transition: 0.4s;
+    padding: 1rem 0;
+    box-sizing:border-box;
+    z-index: 101; 
+}
+
+.abrir-cerrar {
+    color: rgb(203,79,76);
+    font-size:1.6rem;
+    top:1rem;
+    left: 1rem;
+    z-index: 200;
+    position: absolute;
+}
+
+
+.sidebar .boton-cerrar {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1rem;
+    display: block;
+    padding: 0;
+    line-height: 0rem;
+    margin: 0;
+    text-align: center;
+    vertical-align: top;
+}
+
+.sidebar ul, .sidebar li{
+    margin:0;
+    padding:0;
+    list-style:none inside;
+}
+
+.sidebar ul {
+    margin: 4rem auto;
+    display: block;
+    width: 80%;
+    min-width:200px;
+}
+
+.sidebar a {
+	font-family: 'PT Sans Narrow', sans-serif;
+	font-size: 22pt;
+    display: block;
+    font-size: 120%;
+    color: rgb(255,255,255);
+    text-decoration: none;
+    margin-bottom: 5%;
+    
+}
+
+.sidebar a:hover{
+    color: rgb(110,79,76);
+}
+
+
+#contenido-side {
+    transition: margin-left .4s;
+    padding: 1rem;
+}
+
+
+
+
+ 
+}
+
+#abrir {
+    
+}
+#cerrar {
+    display: none;
+}
+
