--- a/etiquetas/css/estilo.css
+++ b/etiquetas/css/estilo.css
@@ -5,27 +5,42 @@
 body {
     margin: 0;
     font-family: Arial;
+    background-color: rgb(0,0,0);
 }
+
 
 .header {
     text-align: center;
     padding-left: 10%;
     position: relative;
     z-index: 1;
+    background-color: rgb(0,0,0);
 
 
 }
 
 h1 {
     font-size: 20px;
+    color: white;
+    font-family: 'Enriqueta', serif;
 }
+
+#titulo {
+    text-decoration: none;
+    color: white;
+}
+
+ h3 {
+    color: white;
+    font-family: 'Enriqueta', serif; 
+ }
 
 #conten {
 
     position: fixed;
     width:100%;
     z-index: 2;
-    background-color: white;
+    background-color: rgb(0,0,0);
     
 }
 
@@ -34,13 +49,8 @@ h1 {
 	width: 200%;
     margin-left: 5%;
 
-
 }
 
-#todo{
-    z-index: 100;
-    color: rgba(0,0,0,0.9);
-}
 
 
 .row {
@@ -50,7 +60,7 @@ h1 {
     flex-wrap: wrap;
     padding: 0 4px;
     width: 100%;
-    z-index: 1;
+    
 
 }
 
@@ -59,19 +69,20 @@ h1 {
     -ms-flex: 12.5%; /* IE 10 */
     flex: 12.5%;
     padding: 0 8px;
-    margin-top: 10%;
+    margin-top: 6%;
 }
 
 .column img {
-    margin-top: 8px;
+    margin-top: 12px;
     vertical-align: middle;
     opacity: 0.85;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
+
 }
 
 img:hover {
     opacity: 1;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
 
 }
 
@@ -82,19 +93,35 @@ img:hover {
    bottom:0px;
    height:10%;
    width:100%;
-   background:#666;
+   background:rgba(15, 15, 15);
+   z-index: 11;
 }
 
  ul {
     list-style-type: none;
-    text-align: center;
-    margin-top: 2%;
+    margin-top: 1%;
+    text-decoration: none;
 }
 
 li{
    display: inline;
-   text-align: center;
    margin: 0 10px 0 0;
+   text-decoration: none;
+}
+
+.enlaces {
+    
+    color: rgb(203,79,76);
+    font-size: 12px;
+    font-family: 'PT Sans Narrow', sans-serif;
+    text-decoration: none;
+}
+
+
+
+.enlaces:hover{
+    color: rgb(110,79,76);
+
 }
 
 
@@ -105,7 +132,7 @@ li{
     top: 0;
     left: 0;
     z-index: 1;
-    background-color: #00324b;
+    background-color: rgb(223,79,76);
     overflow-x: hidden;
     transition: 0.4s;
     padding: 1rem 0;
@@ -114,8 +141,8 @@ li{
 }
 
 .abrir-cerrar {
-    color: #000000;
-    font-size:1rem;
+    color: rgb(223,79,76);
+    font-size:1.6rem;
     top:1rem;
     left: 1rem;
     z-index: 2;
@@ -152,15 +179,15 @@ li{
 .sidebar a {
     display: block;
     font-size: 120%;
-    color: #eee;
+    color: rgb(255,255,255);
     text-decoration: none;
+    margin-bottom: 5%;
+    font-family: 'PT Sans Narrow', sans-serif;
     
 }
 
 .sidebar a:hover{
-    color:#fff;
-    background-color: #f90;
-
+    color: rgb(150,79,76);
 }
 
 
@@ -180,16 +207,4 @@ li{
 }
 #cerrar {
     display: none;
-}
-
-
-
-
-@media (max-width: 800px) and (min-width: 300px) {
-.sidebar { width:40%;
-        overflow-x: hidden;}
-
-.column{-ms-flex: 25%; /* IE 10 */
-    flex: 25%;}
-
 }
