--- a/estilos-inicio.css
+++ b/estilos-inicio.css
@@ -39,7 +39,7 @@ h1 {
    bottom:0px;
    height:10%;
    width:100%;
-   background:rgba(15, 15, 15);
+   background:rgb(15, 15, 15);
    z-index: 11;
 }
 
