--- a/estilos/estilo-nosotros.css
+++ b/estilos/estilo-nosotros.css
@@ -1,26 +1,16 @@
-
-
 body {
-	margin: 0 auto;
+    margin: 0 auto;
+    background-color: rgb(0,0,0);
 }
 
 .contenedor {
-	
-	width: 100%;
-	height: 100%;
-	
+    
+    width: 100%;
+    height: 100%;
+    
 }
-
-.contenedor img {
-
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	z-index: 1;
-} 
-
 h1 {
-	position: absolute;
+    position: absolute;
     left: 50%;
     top: 5%;
     transform: translate(-50%, -50%);
@@ -31,47 +21,20 @@ h1 {
     font-size: 60;
 }
 
-
-
-#footer {
-   position:fixed;
-   left:0px;
-   bottom:0px;
-   height:10%;
-   width:100%;
-   background:rgb(15, 15, 15);
-   z-index: 11;
-}
-
- ul {
-    list-style-type: none;
-    margin-top: 1%;
-    text-decoration: none;
-}
-
-li{
-   display: inline;
-   margin: 0 10px 0 0;
-   text-decoration: none;
-}
-
-.enlaces {
-    text-decoration: none;
-    color: rgb(203,79,76);
-    font-size: 12px;
-    font-family: 'PT Sans Narrow', sans-serif;
-}
-
-.enlaces:hover{
-	color: rgb(110,79,76);
-
-}
+ h3 {
+    color: white;
+    font-family: 'Enriqueta', serif; 
+    position: absolute;
+    left: 50%;
+    top: 12%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+ }
 
 
 
 
 
-/* PARA EL SIDEBAR */
 
 .sidebar {
     position: fixed;
@@ -79,8 +42,8 @@ li{
     width: 0;
     top: 0;
     left: 0;
-    z-index: 2;
-    background-color: rgb(203,79,76);
+    z-index: 1;
+    background-color: rgb(223,79,76);
     overflow-x: hidden;
     transition: 0.4s;
     padding: 1rem 0;
@@ -89,11 +52,11 @@ li{
 }
 
 .abrir-cerrar {
-    color: rgb(203,79,76);
+    color: rgb(223,79,76);
     font-size:1.6rem;
     top:1rem;
     left: 1rem;
-    z-index: 200;
+    z-index: 2;
     position: absolute;
 }
 
@@ -125,31 +88,19 @@ li{
 }
 
 .sidebar a {
-	font-family: 'PT Sans Narrow', sans-serif;
-	font-size: 22pt;
     display: block;
     font-size: 120%;
     color: rgb(255,255,255);
     text-decoration: none;
     margin-bottom: 5%;
+    font-family: 'PT Sans Narrow', sans-serif;
     
 }
 
 .sidebar a:hover{
-    color: rgb(110,79,76);
+    color: rgb(150,79,76);
 }
 
-
-#contenido-side {
-    transition: margin-left .4s;
-    padding: 1rem;
-}
-
-
-
-
- 
-}
 
 #abrir {
     
@@ -157,4 +108,3 @@ li{
 #cerrar {
     display: none;
 }
-
