--- a/estilos-inicio.css
+++ b/estilos-inicio.css
@@ -11,15 +11,108 @@ body {
 	
 }
 
-.contenedor img {
+.contenedor #fondo {
 
 	width: 100%;
 	height: 100%;
 	position: fixed;
 	z-index: 1;
+    left: 0;
 } 
 
-h1 {
+
+#tecla{
+    z-index: 500;
+    top:33%;
+    left: 69.4%;
+    position: fixed;
+    width: 15px;
+
+
+}
+
+
+
+#tecla-1{
+    z-index: 500;
+    top:37%;
+    left: 69%;
+    position: fixed;
+    width: 23px;
+
+}
+
+#tecla-2{
+    z-index: 500;
+    top:33.9%;
+    left: 71.6%;
+    position: fixed;
+    width: 20px;
+
+}
+
+#tecla-3{
+    z-index: 500;
+    top:26%;
+    left: 69.5%;
+    position: fixed;
+    width: 16px;
+
+}
+
+#tecla-4{
+    z-index: 500;
+    top:26%;
+    left: 72%;
+    position: fixed;
+    width: 16px;
+
+}
+
+
+
+
+
+
+.popover{
+    z-index: 10000;
+    position: absolute;
+    padding-right: 33px;
+        
+    margin-left: 2%;
+    background-color:rgb(30, 30, 30) !important;
+
+}
+
+.popover-content{
+    background-color:rgb(30, 30, 30);    
+    color: #FFFFFF;
+    font-size: 12px;
+    width: 100%;
+    font-family: 'PT Sans Narrow', sans-serif;
+
+}
+
+
+.popover.right > .arrow:after {
+
+    border-right-color: rgb(30, 30, 30) !important;
+    color: rgb(30, 30, 30) !important;
+}
+  
+.popover.left > .arrow:after {
+    border-left-color: rgb(30, 30, 30) !important;
+    color: rgb(30, 30, 30) !important;
+}
+
+    
+    
+
+
+
+
+
+#titulo {
 	position: absolute;
     left: 50%;
     top: 5%;
@@ -29,27 +122,32 @@ h1 {
     color: white;
     font-family: 'Enriqueta', serif;
     font-size: 60;
+    font-weight: bold;
 }
 
 
 
-#footer {
+#footerrr {
    position:fixed;
    left:0px;
    bottom:0px;
-   height:10%;
+   height:15%;
    width:100%;
    background:rgb(15, 15, 15);
    z-index: 11;
 }
 
- ul {
-    list-style-type: none;
-    margin-top: 1%;
+#contenido-f {
+    position: fixed;
+    height: 100%;
+    min-height: 30%;
+
+    margin-top: 1.5%;
     text-decoration: none;
+    
 }
 
-li{
+.foot{
    display: inline;
    margin: 0 10px 0 0;
    text-decoration: none;
@@ -64,8 +162,18 @@ li{
 
 .enlaces:hover{
 	color: rgb(110,79,76);
+    text-decoration: none;
+
+
 
 }
+
+.separador {
+    color: rgb(70, 70,70);
+}
+
+
+
 
 
 
@@ -73,7 +181,7 @@ li{
 
 /* PARA EL SIDEBAR */
 
-.sidebar {
+.sidebarr{
     position: fixed;
     height: 100%;
     width: 0;
@@ -85,24 +193,28 @@ li{
     transition: 0.4s;
     padding: 1rem 0;
     box-sizing:border-box;
-    z-index: 101; 
+    z-index: 201; 
 }
 
 .abrir-cerrar {
     color: rgb(203,79,76);
-    font-size:1.6rem;
+    font-size:2rem;
     top:1rem;
     left: 1rem;
     z-index: 200;
     position: absolute;
 }
 
+.abrir-cerrar:hover {
+    color: rgb(101,79,76);
+}
 
-.sidebar .boton-cerrar {
+
+.sidebarr .boton-cerrar {
     position: absolute;
     top: 1rem;
     right: 1rem;
-    font-size: 1rem;
+    font-size: 2rem;
     display: block;
     padding: 0;
     line-height: 0rem;
@@ -111,20 +223,27 @@ li{
     vertical-align: top;
 }
 
-.sidebar ul, .sidebar li{
-    margin:0;
-    padding:0;
-    list-style:none inside;
-}
 
-.sidebar ul {
+
+.sidebarr ul {
+    top: 20%;
     margin: 4rem auto;
     display: block;
     width: 80%;
     min-width:200px;
+    padding: 10%;
 }
 
-.sidebar a {
+.sidebarr ul, .sidebarr li{
+    margin-top:10%;
+    padding:0;
+    list-style:none inside;
+
+}
+
+
+
+.sidebarr a {
 	font-family: 'PT Sans Narrow', sans-serif;
 	font-size: 22pt;
     display: block;
@@ -135,8 +254,9 @@ li{
     
 }
 
-.sidebar a:hover{
+.sidebarr a:hover{
     color: rgb(110,79,76);
+    text-decoration: none;
 }
 
 
