--- a/estilos/estilo-nosotros.css
+++ b/estilos/estilo-nosotros.css
@@ -1,62 +1,88 @@
 body {
     margin: 0 auto;
-    background-color: rgb(0,0,0);
+    background-color: #000000;
 }
 
-.contenedor {
-    
-    width: 100%;
-    height: 100%;
-    
-}
-h1 {
+
+
+
+
+#contenedor{
     position: absolute;
-    left: 50%;
-    top: 5%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
+    width: 100%;
+}
+
+
+
+h1 {
+    float: left;
+    position: absolute;
+    left: 34%;
+    margin-top: 5%;
     z-index: 10;
     color: white;
     font-family: 'Enriqueta', serif;
     font-size: 60;
 }
 
- h3 {
+
+#titulo {
+    text-decoration: none;
     color: white;
-    font-family: 'Enriqueta', serif; 
+}
+
+#parrafo{
+    float: left;
     position: absolute;
-    left: 50%;
-    top: 12%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
- }
+    z-index: 10;
+    width: 50%;
+    height:50%;
+    left: 34%;
+    color: white;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 16px;
+    margin-top:13%;
+
+
+}
+
+#github{
+    text-decoration: none;
+    color:rgb(203, 79, 76);
+
+}
+
+#discl {
+    color: rgb(60,60,60);
+}
 
 
 
-
-
+/* PARA EL SIDEBAR */
 
 .sidebar {
+    float: left;
     position: fixed;
     height: 100%;
-    width: 0;
+    width: 18%;
     top: 0;
     left: 0;
-    z-index: 1;
-    background-color: rgb(223,79,76);
+    z-index: 2;
+    background-color: rgb(203,79,76);
     overflow-x: hidden;
     transition: 0.4s;
     padding: 1rem 0;
     box-sizing:border-box;
     z-index: 101; 
+    margin-right: 0;
 }
 
 .abrir-cerrar {
-    color: rgb(223,79,76);
+    color: rgb(203,79,76);
     font-size:1.6rem;
     top:1rem;
     left: 1rem;
-    z-index: 2;
+    z-index: 200;
     position: absolute;
 }
 
@@ -75,9 +101,12 @@ h1 {
 }
 
 .sidebar ul, .sidebar li{
+    position: relative;
     margin:0;
+    margin-left: 5%;
     padding:0;
     list-style:none inside;
+
 }
 
 .sidebar ul {
@@ -88,23 +117,36 @@ h1 {
 }
 
 .sidebar a {
+    position: relative;
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 22px;
     display: block;
     font-size: 120%;
     color: rgb(255,255,255);
     text-decoration: none;
     margin-bottom: 5%;
-    font-family: 'PT Sans Narrow', sans-serif;
     
 }
 
 .sidebar a:hover{
-    color: rgb(150,79,76);
+    color: rgb(110,79,76);
 }
 
+
+#contenido-side {
+    transition: margin-left .4s;
+    padding: 1rem;
+}
+
+
+
+
+ 
+}
 
 #abrir {
     
 }
 #cerrar {
-    display: none;
+    
 }
