--- a/etiquetas/css/estilo.css
+++ b/etiquetas/css/estilo.css
@@ -23,6 +23,9 @@ h1 {
     font-size: 20px;
     color: white;
     font-family: 'Enriqueta', serif;
+    margin-bottom: 0;
+
+
 }
 
 #titulo {
@@ -33,6 +36,9 @@ h1 {
  h3 {
     color: white;
     font-family: 'Enriqueta', serif; 
+    font-weight: lighter;
+    margin-top: 0;
+    font-size: 16px;
  }
 
 #conten {
@@ -71,7 +77,7 @@ h1 {
     -ms-flex: 12.5%; /* IE 10 */
     flex: 12.5%;
     padding: 0 8px;
-    margin-top: 6%;
+    margin-top: 4%;
     padding-bottom: 5%;
 }
 
@@ -84,8 +90,6 @@ h1 {
 
 img:hover {
     opacity: 1;
-    -webkit-transition: .3s ease-in-out;
-    transition: .3s ease-in-out;
 
 }
 
@@ -94,7 +98,7 @@ img:hover {
    position:fixed;
    left:0px;
    bottom:0px;
-   height:10%;
+   height:14%;
    width:100%;
    background:rgba(15, 15, 15);
    z-index: 11;
@@ -108,7 +112,7 @@ img:hover {
 
 li{
    display: inline;
-   margin: 0 10px 0 0;
+   margin: 0 2px 0 0;
    text-decoration: none;
 }
 
@@ -127,6 +131,10 @@ li{
 
 }
 
+
+.separador{
+    color: rgb(50,50,50);
+}
 
 .sidebar {
     position: fixed;
