--- a/estilos-inicio.css
+++ b/estilos-inicio.css
@@ -24,9 +24,10 @@ body {
 #tecla{
     z-index: 500;
     top:33%;
-    left: 69.4%;
+    left: 70%;
     position: fixed;
     width: 15px;
+    border-left: 30px;
 
 
 }
@@ -35,8 +36,8 @@ body {
 
 #tecla-1{
     z-index: 500;
-    top:37%;
-    left: 69%;
+    top:36%;
+    left: 70.4%;
     position: fixed;
     width: 23px;
 
@@ -69,6 +70,21 @@ body {
 
 }
 
+#circulo { 
+   width: 14px;   
+   height: 14px;
+   background:#FFFFFF; 
+   -moz-border-radius: 70px; 
+   -webkit-border-radius: 70px; 
+   border-radius: 70px;
+}
+
+#circulo:hover{
+    background:rgb(203,79,76);
+    transition-property: background;
+    transition-duration: 0.5s;
+
+}
 
 
 
@@ -236,6 +252,7 @@ body {
 
 .sidebarr ul, .sidebarr li{
     margin-top:10%;
+    margin-left: 7%;
     padding:0;
     list-style:none inside;
 
