--- a/etiquetas/css/estilo.css
+++ b/etiquetas/css/estilo.css
@@ -143,7 +143,7 @@ li{
     top: 0;
     left: 0;
     z-index: 1;
-    background-color: rgb(223,79,76);
+    background-color: rgb(203,79,76);
     overflow-x: hidden;
     transition: 0.4s;
     padding: 1rem 0;
@@ -153,7 +153,7 @@ li{
 
 .abrir-cerrar {
     color: rgb(223,79,76);
-    font-size:1.6rem;
+    font-size:1.2rem;
     top:1rem;
     left: 1rem;
     z-index: 2;
@@ -163,9 +163,9 @@ li{
 
 .sidebar .boton-cerrar {
     position: absolute;
-    top: 1rem;
-    right: 1rem;
-    font-size: 1rem;
+    top: 0.7rem;
+    right: 0.7rem;
+    font-size: 1.2rem;
     display: block;
     padding: 0;
     line-height: 0rem;
@@ -175,9 +175,10 @@ li{
 }
 
 .sidebar ul, .sidebar li{
-    margin:0;
+    margin-left: 40%;
     padding:0;
     list-style:none inside;
+
 }
 
 .sidebar ul {
@@ -188,11 +189,12 @@ li{
 }
 
 .sidebar a {
+    margin-left: 5%;
     display: block;
-    font-size: 120%;
+    font-size: 102%;
     color: rgb(255,255,255);
     text-decoration: none;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     font-family: 'PT Sans Narrow', sans-serif;
     
 }
