--- a/estilos-inicio.css
+++ b/estilos-inicio.css
@@ -73,7 +73,7 @@ body {
 #circulo { 
    width: 14px;   
    height: 14px;
-   background:#B6B6B6; 
+   background:#959595; 
    -moz-border-radius: 70px; 
    -webkit-border-radius: 70px; 
    border-radius: 70px;
